welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:11: error: ')' expected but ';' found.
setPos(2*biscuit; orange+1)
                ^RunHalf:11: error: ';' expected but ')' found.
setPos(2*biscuit; orange+1)
                          ^