welcome.lessons.welcome.variables.RunHalf.scala.code
var biscuit:Int=0
var orange:Int=0

while (!estSurBiscuit) {avance();}
while (!estSurOrange) {avance();} 

if (estSurBiscuit) {biscuit = biscuit+1}
if (estSurOrange) {orange = orange+1}

setPos(2*biscuit; orange+1)
